[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_BenFoc"
version = "0.0.2"
authors = [
  { name="Benjamin Fkt", email="benjamin.fkt@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/FBen3/MyOwnPackage"
"Bug Tracker" = "https://github.com/FBen3/MyOwnPackage/issues"